# ip

./: .gitignore
src/: exercicio3.txt  exercicio4.txt  exercicio5.txt  exercicio_arquivos.txt  helloWorld.c  prova3.txt  revisao2.txt  revisao3.txt
src/22-04-2021/: exercicio_calcula_area_poligono.c  exercicio_ordenar_3_numeros.c  exercicio_verificar_quadrante.c  main.c  polygonArea.c  quadrantCheck.c  sortNumbers.c  test.c
src/22-04-2021/funcs/: index.c  polygonArea.c  quadrantCheck.c  sortNumbers.c
src/22-04-2021/headers/: polygonArea.h  quadrantCheck.h  sortNumbers.h
src/22-04-2021/tests/: index.c  polygonAreaTest.c  quadrantCheckTest.c
src/exercicio1/: CMakeLists.txt  README.md  age.c  distanceCalc.c  main.c  numberOperations.c  test.c  triangleCheck.c  unitConversion.c
src/exercicio1/funcs/: ageCalc.c  distanceCalc.c  index.c  numberOperations.c  triangleCheck.c  unitConversion.c
src/exercicio1/headers/: ageCalc.h  distanceCalc.h  numberOperations.h  triangleCheck.h  unitConversion.h
src/exercicio1/tests/: ageCalcTest.c  distanceCalcTest.c  index.c  numberOperationsTest.c  triangleCheckTest.c  unitConversionTest.c
src/exercicio2/: main.c  test.c
src/exercicio2/funcs/: index.c  isPrime.c  multiplicationTable.c
src/exercicio2/headers/: isPrime.h  multiplicationTable.h
src/exercicio2/tests/: unitConversionTest.c
src/prova1/: main.c
src/prova1/funcs/: energyConsumption.c  index.c  loanCheck.c  (+2 more)
src/prova2/: main.c  sort.c
src/prova3/: CMakeLists.txt  main.c
src/revisao1/: main.c  test.c
src/revisao3/: main.c
src/shop/: main.c
(+43 files in other folders)
